Test new pipeline - feat/example

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -32,8 +32,8 @@ jobs:
         run: |
           dev_version_json=$(git show origin/dev:package.json)
           dev_version=$(echo $dev_version_json | jq -r .version)
-          dev_minor=$(echo $dev_version | jq -r '. | capture("(?<minor>\\d+)") | .minor')
-          
+          dev_minor=$(echo $dev_version | cut -d. -f2)
+                
           echo "Dev Version JSON: $dev_version_json"
           echo "Dev Version: $dev_version"
           echo "Dev Minor: $dev_minor"
